# deforestation-api

./: Dockerfile  README.md  pyproject.toml
deforestation_api/: __main__.py  settings.py
deforestation_api/dependencies/: deforestationdata.py  queryparams.py
deforestation_api/example_code/curl/: lossyear.sh
deforestation_api/example_code/javascript/: liveness.js  lossyear.js  ready.js
deforestation_api/example_code/python/: lossyear.py
deforestation_api/models/: basin.py  basin_types.py  geometry.py  geometry_types.py
deforestation_api/openapi/: openapi.py
deforestation_api/routers/: deforestation.py  healthcheck.py
deforestation_api/tests/: test_healthcheck.py
deployment/argocd/: app.yaml
deployment/kubernetes/: deforestation-api.yaml
